[metadata]
name = deims
version = 1.0
author = Christoph Wohner and Will Bolton
author_email = https://deims.org/contact
description = Interface to the DEIMS-SDR API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eLTER-RI/deimsPy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = deims
install_requires =
python_requires = >=3
