[metadata]
name = deims
version = 3.1
author = Christoph Wohner and Will Bolton
author_email = wilbol@ceh.ac.uk
description = Interface to the DEIMS-SDR API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eLTER-RI/deimsPy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = deims
install_requires =
    geopandas
    geopy
    pandas
python_requires = >=3
